# LisSero

./: .gitignore  DESCRIPTION.rst  LisSero.py  Pipfile  README.md  debian  deploy.sh  paper.bib  paper.md  paper.md.md  primers  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: CI.yml  python-package.yml
db/: primers.tab  serotypes.tab
lissero/: Blast.py  Sample.py  Serotype.py  __init__.py  run_lissero.py  serotyping.py
lissero/db/: binary_sequences.fasta  lissero.ndb  lissero.nhr  lissero.nin  lissero_db.json  sequences.fasta
lissero/db/controls/: GCF_000195795.1_ASM19579v1_genomic.fna
lissero/lissero/db/: lissero.ndb  lissero.nin  lissero.njs  lissero.nos  lissero.nsq  lissero_db.json
lissero/scripts/: Blast.py  Sample.py  Serotype.py
src/lissero/: __init__.py  __main__.py  cli.py  exceptions.py  func.py  models.py
test/: NC_002973.fna  NC_013768.fna  NC_018587.fna  NC_018591.fna
tests/: conftest.py  pytest.ini  test_BlastClass.py  test_MakeBlastDBClass.py  test_SampleClass.py  test_SerotypeDBClass.py
tests/test_seq/: NC_017529.fna  NC_018588.fna  not_fasta_file.fna
trash/: flit.ini
