[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lissero"
authors = [
    { name = "Jason Kwong", email = "kwongj@gmail.com" },
    { name = "Anders Goncalves da Silva", email = "andersgs@gmail.com" },
    { name = "Josh Zhang", email = "josh.zhang@unimelb.edu.au" },
]
description = "In silico serotyping of Listeria monocytogenes"
readme = "README.md"
requires-python = ">=3.7,<4.0"
keywords = ["resources", "library"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 5 - Production/Stable",
]
dependencies = ["biopython>=1.78", "py-fasta-validador>=0.6", "loguru>=0.6"]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/MDU-PHL/lissero"
repository = "https://github.com/MDU-PHL/lissero"
documentation = "https://github.com/MDU-PHL/lissero/blob/main/README.md"
issues = "https://github.com/MDU-PHL/lissero/issues"
changelog = "https://github.com/MDU-PHL/lissero/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = ["pytest"]
dev = ["black", "build", "pytest", "isort", "pylint", "twine"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lissero = ["*.fasta"]

[tool.setuptools.dynamic]
version = { attr = "lissero.__version__" }

[tool.black]
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | tests/data
)/
'''

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.message]
disable = ["E1101"]
